--- a/src/TcpFake/TcpFake.csproj
+++ b/src/TcpFake/TcpFake.csproj
@@ -20,4 +20,13 @@
         <NoWarn>CS8002,CS1700;IL2121;CS8618;IL2121;CS8603</NoWarn>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="CSharpier.MsBuild" Version="0.27.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="FatCat.Toolkit" Version="1.0.195" />
+      <PackageReference Include="FatCat.Toolkit.WebServer" Version="1.0.24" />
+    </ItemGroup>
+
 </Project>
